[package]
name = "ref-extended"
description = "Achieve lifetime of value by shortening entire program lifetime"
version = "0.1.1"
edition = "2021"
readme = "README.md"

authors = [
    "storycraft <storycraft@pancake.sh>"
]
license = "MIT"
repository = "https://github.com/storycraft/ref-extended"

[dependencies]
